--- a/frontend/src/components/MainPage/MainPage.css
+++ b/frontend/src/components/MainPage/MainPage.css
@@ -1,5 +1,6 @@
 .main-container {
   /* border: 2px solid #4688c7; */
-  height: 100vh;
+  min-height: 100vh;
   padding: 8px 0;
+  position: relative;
 }
